--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -21,4 +21,5 @@ jobs:
       run: |
         gem install bundler
         bundle install --jobs 4 --retry 3
+        bundle exec db:create db:migrate db:seed RAILS_ENV=test
         bundle exec rake
