--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -9,7 +9,20 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: password
+          MYSQL_DATABASE: app_test
+          MYSQL_USER: app
+          MYSQL_PASSWORD: password
+    runs:
+      using: 'docker'
+      image: 'Dockerfile'
+      env:
+        MYSQL_USER: app
+        MYSQL_PASSWORD: password
 
     steps:
     - uses: actions/checkout@v2
